--- a/templates/inscription/inscriptionProfessionnel.html.twig
+++ b/templates/inscription/inscriptionProfessionnel.html.twig
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <link rel="stylesheet" href="{{ asset('css/style-particulier.css?v=1.0') }}">
-         <link rel="stylesheet" href="{{ asset('css/style-particulier2.css?v=1.0') }}">
-         <link rel="stylesheet" href="{{ asset('css/footer.css?v=1.0') }}">
-         <link rel="stylesheet" href="{{ asset('css/menu.css?v=1.0') }}">
-         
-
-
+    <title>Inscription Professionnel</title>
+    <!-- Inclure les CSS nécessaires -->
+    <link rel="stylesheet" href="{{ asset('css/style-particulier.css?v=1.0') }}">
+    <link rel="stylesheet" href="{{ asset('css/style-particulier2.css?v=1.0') }}">
+    <link rel="stylesheet" href="{{ asset('css/footer.css?v=1.0') }}">
+    <link rel="stylesheet" href="{{ asset('css/menu.css?v=1.0') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <title>Page d'Accueil</title>
 </head>
-
 <body>
     {% include 'menu.html.twig' %}
     
     <div class="container-block">
         <div class="block-text">
-            <h1>Bienvenue chez COUP'ACIER, vous êtes un client :</h1>
+            <h1>Bienvenue chez COUP'ACIER, vous êtes un client professionnel :</h1>
             <section class="buttons">
-                <a href="#"><button class="button particulier">Professionnel</button></a>
+                <a href="#"><button class="button particulier">Particulier</button></a>
             </section>
         </div>
         <div class="form-container part">
-            <form class="particulier-form" id="inscriptionForm">
-                <h1>Crée Votre compte</h1>
-                <br></br>
+            <form action="{{ path('api_inscription') }}" method="post" class="particulier-form" id="inscriptionForm">
+                <h1>Créer votre compte professionnel</h1>
+                <br><br>
                 <label for="nom">Nom:</label>
                 <input type="text" id="nom" name="Nom" required>
 
@@ -65,7 +62,7 @@
                 <label for="raison-sociale">Raison Sociale:</label>
                 <input type="text" id="raison-sociale" name="RaisonSociale" required>
                 
-                <label for="numero-telephone">Numero de téléphone:</label>
+                <label for="numero-telephone">Numéro de téléphone:</label>
                 <div class="phone-container">
                     <div class="flag"></div>
                     <span class="phone-prefix">+33</span>
@@ -77,15 +74,15 @@
                 <div id="error-message" class="error-message">Tous les champs doivent être remplis.</div>
                 
                 <div class="button-container">
-                    <button id="submitBtn" class="button-87">S'incrire</button>
+                    <button type="submit" id="submitBtn" class="button-87">S'inscrire</button>
                 </div>
             </form>
         </div>
         
         <div id="responseContainer"></div>
     </div>
+    
     {% include 'footer.html.twig' %}
-
     
     <script src="{{ asset('js/inscriptionPro.js') }}"></script>
 </body>
