--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -37,7 +37,7 @@
             <section class="buttons">
                 <a href="{{ path('app_connexion') }}"><button class="button connexion">CONNEXION</button></a>
                 <a href="{{ path('app_choix') }}"><button class="button create">CRÉER UN COMPTE</button></a>
-                <a href="config.html"><button class="button config">CONFIGURATEUR</button></a>
+                <a href="{{ path('app_config') }}"><button class="button config">CONFIGURATEUR</button></a>
                 <a href="{{ path('app_super_admin') }}"><button class="button admin">ADMINISTRATEUR</button></a>
             </section>
         </div>
@@ -45,7 +45,7 @@
         <section class="buttons-responsive">
             <a href="{{ path('app_connexion') }}"><button class="button connexion">CONNEXION</button></a>
             <a href="{{ path('app_choix') }}"><button class="button create">CRÉER UN COMPTE</button></a>
-            <a href="config.html"><button class="button config">CONFIGURATEUR</button></a>
+            <a href="{{ path('app_config') }}"><button class="button config">CONFIGURATEUR</button></a>
         </section>
 
         <div class="content">
