connexion Api mongo + envoie de données

--- a/templates/inscription/inscriptionParticulier.html.twig
+++ b/templates/inscription/inscriptionParticulier.html.twig
@@ -78,6 +78,8 @@
     </div>
 {% include 'footer.html.twig' %}
 <script src="{{ asset('js/inscriptionParticulier.js') }}"></script>
+<script src="{{ asset('js/tracking.js') }}"></script>
+
 
 
 </body>
