--- a/templates/inscription/inscriptionProfessionnel.html.twig
+++ b/templates/inscription/inscriptionProfessionnel.html.twig
@@ -88,5 +88,7 @@
 
     
     <script src="{{ asset('js/inscriptionPro.js') }}"></script>
+    <script src="{{ asset('js/tracking.js') }}"></script>
+
 </body>
 </html>
