--- a/templates/produit/produit.html.twig
+++ b/templates/produit/produit.html.twig
@@ -237,5 +237,7 @@
 {% include 'footer.html.twig' %}
 <script src="{{ asset('js/menu.js') }}"></script>
 <script src="{{ asset('js/index.js') }}"></script>
+<script src="{{ asset('js/tracking.js') }}"></script>
+
 
 </html>
