--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -79,5 +79,5 @@
 {% include 'footer.html.twig' %}
 <script src="{{ asset('js/menu.js') }}"></script>
 <script src="{{ asset('js/index.js') }}"></script>
-
+<script src="{{ asset('js/tracking.js') }}"></script>
 </html>
