--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +6,6 @@
     <link rel="stylesheet" href="{{ asset('css/style.css') }}">
     <link rel="stylesheet" href="{{ asset('css/footer.css') }}">
     <link rel="stylesheet" href="{{ asset('css/menu.css') }}">
-
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Inclure Font Awesome via CDN -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap">
@@ -18,69 +16,72 @@
 <body>
 
 {% include 'menu.html.twig' %}
-    <div class="container-block">
-        <div class="overlay blue-overlay"></div>
-        <div class="overlay red-overlay"></div>
-        <button class="show-button" onclick="showContent()">Afficher le contenu</button>
-        <div class="bonjour-container">
-            <span class="bonjour-letter">C</span>
-            <span class="bonjour-letter">O</span>
-            <span class="bonjour-letter">U</span>
-            <span class="bonjour-letter">P</span>
-            <span class="bonjour-letter">E</span>
-            <span class="bonjour-letter">'</span>
-            <span class="bonjour-letter">A</span>
-            <span class="bonjour-letter">C</span>
-            <span class="bonjour-letter">I</span>
-            <span class="bonjour-letter">E</span>
-            <span class="bonjour-letter">R</span>
-        </div>
-        <div class="block-text">
-            <h1>Faites découper des pièces de métal sur mesure !</h1>
+
+<div class="container-block">
+    <div class="overlay blue-overlay"></div>
+    <div class="overlay red-overlay"></div>
+    <button class="show-button" onclick="showContent()">Afficher le contenu</button>
+    <div class="bonjour-container">
+        <span class="bonjour-letter">C</span>
+        <span class="bonjour-letter">O</span>
+        <span class="bonjour-letter">U</span>
+        <span class="bonjour-letter">P</span>
+        <span class="bonjour-letter">E</span>
+        <span class="bonjour-letter">'</span>
+        <span class="bonjour-letter">A</span>
+        <span class="bonjour-letter">C</span>
+        <span class="bonjour-letter">I</span>
+        <span class="bonjour-letter">E</span>
+        <span class="bonjour-letter">R</span>
+    </div>
+    <div class="block-text">
+        <h1>Faites découper des pièces de métal sur mesure !</h1>
+        {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
             <section class="buttons">
-                <a href="{{ path('app_connexion') }}"><button class="button connexion">CONNEXION</button></a>
+                <a href="{{ path('connexion') }}"><button class="button connexion">CONNEXION</button></a>
                 <a href="{{ path('app_choix') }}"><button class="button create">CRÉER UN COMPTE</button></a>
                 <a href="config.html"><button class="button config">CONFIGURATEUR</button></a>
                 <a href="{{ path('app_super_admin') }}"><button class="button admin">ADMINISTRATEUR</button></a>
             </section>
-        </div>
+        {% endif %}
+    </div>
 
-        <section class="buttons-responsive">
-            <a href="{{ path('app_connexion') }}"><button class="button connexion">CONNEXION</button></a>
-            <a href="{{ path('app_choix') }}"><button class="button create">CRÉER UN COMPTE</button></a>
-            <a href="config.html"><button class="button config">CONFIGURATEUR</button></a>
-        </section>
+    <section class="buttons-responsive">
+        <a href="{{ path('connexion') }}"><button class="button connexion">CONNEXION</button></a>
+        <a href="{{ path('app_choix') }}"><button class="button create">CRÉER UN COMPTE</button></a>
+        <a href="config.html"><button class="button config">CONFIGURATEUR</button></a>
+    </section>
 
-        <div class="content">
-            <h2>Bienvenue chez COUP'ACIER</h2>
+    <div class="content">
+        <h2>Bienvenue chez COUP'ACIER</h2>
+    </div>
+    <div class="block">
+        <div class="image-block">
+            <img src="{{ asset('pictures/Acier.jpg') }}" alt="Image 1">
+            <div class="overlay-text">ACIER</div>
         </div>
-        <div class="block">
-            <div class="image-block">
-                <img src="{{ asset('pictures/Acier.jpg') }}" alt="Image 1">
-                <div class="overlay-text">ACIER</div>
-            </div>
-            <div class="image-block">
-                <img src="{{ asset('pictures/alu.jpg') }}" alt="Image 2">
-                <div class="overlay-text">ALU</div>
-            </div>
-            <div class="image-block">
-                <img src="{{ asset('pictures/corten.webp') }}" alt="Image 3">
-                <div class="overlay-text">CORTEN</div>
-            </div>
-            <div class="image-block">
-                <img src="{{ asset('pictures/fer.jpg') }}" alt="Image 4">
-                <div class="overlay-text">GALVA</div>
-            </div>
-            <div class="image-block">
-                <img src="{{ asset('pictures/inox.jpg') }}" alt="Image 5">
-                <div class="overlay-text">INOX</div>
-            </div>
+        <div class="image-block">
+            <img src="{{ asset('pictures/alu.jpg') }}" alt="Image 2">
+            <div class="overlay-text">ALU</div>
+        </div>
+        <div class="image-block">
+            <img src="{{ asset('pictures/corten.webp') }}" alt="Image 3">
+            <div class="overlay-text">CORTEN</div>
+        </div>
+        <div class="image-block">
+            <img src="{{ asset('pictures/fer.jpg') }}" alt="Image 4">
+            <div class="overlay-text">GALVA</div>
+        </div>
+        <div class="image-block">
+            <img src="{{ asset('pictures/inox.jpg') }}" alt="Image 5">
+            <div class="overlay-text">INOX</div>
         </div>
     </div>
-    
-</body>
+</div>
+
 {% include 'footer.html.twig' %}
 <script src="{{ asset('js/menu.js') }}"></script>
 <script src="{{ asset('js/index.js') }}"></script>
 
+</body>
 </html>
